Fix jumbotron on smaller screens

--- a/stylesheets/sass/styles/_jumbotron.scss
+++ b/stylesheets/sass/styles/_jumbotron.scss
@@ -5,7 +5,7 @@
 
   .jumbotron {
     height: 320px;
-    width: 780px;
+    max-width: 780px;
     margin-left: 40%;
     margin-bottom: 0;
     background: transparent;
